# CyberChat

./: .gitignore  CMakeLists.txt  README.md  app.rc.in  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
.github/workflows/: cmake-multi-platform.yml  cross-platform-build
